--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "archiver": "^7.0.1",
     "csv-parser": "^3.0.0",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
